modify by zhuge opinion

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/title_bar"
+        android:layout_marginBottom="45dp"
         android:fadingEdge="none" >
 
         <LinearLayout
@@ -176,6 +177,16 @@
                     android:text="@string/tourreport_takeover_new"
                     android:textColor="@color/blue"
                     android:textSize="15sp" />
+                
+                <Button
+                    android:id="@+id/tourreport_btn_submit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/tourreport_btn_submit_title"
+                    android:textColor="@color/blue"
+                    android:textSize="15sp" />
+                
             </LinearLayout>
 
             <!-- 工作内容的容器 -->
@@ -212,7 +223,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:layout_weight="2"
+                        android:layout_weight="3"
                         android:text="@string/takeover_title"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
@@ -222,7 +233,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="1dp"
-                        android:layout_weight="8"
+                        android:layout_weight="7"
                         android:textColor="@color/red"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -242,7 +253,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:layout_weight="2"
+                        android:layout_weight="3"
                         android:text="@string/faxie_title"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
@@ -252,7 +263,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="1dp"
-                        android:layout_weight="8"
+                        android:layout_weight="7"
                         android:textColor="@color/red"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -272,7 +283,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:layout_weight="2"
+                        android:layout_weight="3"
                         android:text="@string/fuzheng_title"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
@@ -282,7 +293,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="1dp"
-                        android:layout_weight="8"
+                        android:layout_weight="7"
                         android:textColor="@color/red"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -302,7 +313,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:layout_weight="2"
+                        android:layout_weight="3"
                         android:text="@string/takeover_tools_title"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
@@ -312,7 +323,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="1dp"
-                        android:layout_weight="8"
+                        android:layout_weight="7"
                         android:textColor="@color/red"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -332,7 +343,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:layout_weight="2"
+                        android:layout_weight="3"
                         android:text="@string/onduty_title"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
@@ -342,7 +353,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="1dp"
-                        android:layout_weight="8"
+                        android:layout_weight="7"
                         android:textColor="@color/red"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -528,8 +539,8 @@
                         android:layout_weight="2"
                         android:textColor="@color/red"
                         android:textSize="15sp" />
-                    
-                     <TextView
+
+                    <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -546,13 +557,10 @@
                         android:layout_weight="2"
                         android:textColor="@color/red"
                         android:textSize="15sp" />
-                    
-                    
                 </LinearLayout>
 
-                
-
                 <!-- 孔深 -->
+
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="50dp"
