--- a/res/layout/activity_workcontent_list.xml
+++ b/res/layout/activity_workcontent_list.xml
@@ -18,7 +18,8 @@
     <ListView
         android:id="@+id/workcontent_list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="45dp"
         android:layout_below="@id/title_bar" >
     </ListView>
 
