--- a/res/layout/workcontent_listview_filling.xml
+++ b/res/layout/workcontent_listview_filling.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/android_layout_bg"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
 
+    <!-- Listview  填充内容 -->
+
+	<!-- 班报日期和时间 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,21 +16,42 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/tourreport_list_date"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_date_title"
+            android:textColor="@color/black"
+            android:textSize="15sp" >
+        </TextView>
+
+        <TextView
+            android:id="@+id/tourreport_list_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:textColor="@color/red"
+            android:textSize="15sp" >
+        </TextView>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_time_title"
             android:textColor="@color/black"
             android:textSize="15sp" >
         </TextView>
 
         <TextView
             android:id="@+id/tourreport_list_time"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="3"
             android:textColor="@color/black"
             android:textSize="15sp" />
     </LinearLayout>
 
+    <!-- 进尺，取心 和 孔深 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,29 +59,63 @@
         android:layout_marginLeft="10dp"
         android:gravity="center"
         android:orientation="horizontal" >
+
+        <!-- 进尺  -->
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_total_drillinglength"
+            android:textColor="@color/black"
+            android:textSize="15sp" >
+        </TextView>
 
         <TextView
             android:id="@+id/tourreport_list_drillinglength"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:layout_weight="3"
+            android:textColor="@color/red"
             android:textSize="15sp" />
 
+        <!-- 取心 -->
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_total_corelength"
+            android:textColor="@color/black"
+            android:textSize="15sp" >
+        </TextView>
+        
         <TextView
             android:id="@+id/tourreport_list_corelength"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:layout_weight="3"
+            android:textColor="@color/red"
             android:textSize="15sp" />
 
+        <!-- 孔深 -->
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_total_holedeep"
+            android:textColor="@color/black"
+            android:textSize="15sp" >
+        </TextView>
+        
         <TextView
             android:id="@+id/tourreport_list_holedeep"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:layout_weight="4"
+            android:textColor="@color/red"
             android:textSize="15sp" />
     </LinearLayout>
 
+    <!-- 纯钻时长 和 辅助时长 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -68,27 +125,43 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/tourreport_list_drilltime"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_drilling_time"
             android:textColor="@color/black"
+            android:textSize="15sp" >
+        </TextView>
+        
+        <TextView
+            android:id="@+id/tourreport_list_drilltime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:textColor="@color/red"
             android:textSize="15sp" />
+        
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_auxiliary_time"
+            android:textColor="@color/black"
+            android:textSize="15sp" >
+        </TextView>
 
         <TextView
             android:id="@+id/tourreport_list_auxtime"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:layout_weight="3"
+            android:textColor="@color/red"
             android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/tourreport_list_othertime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
+        
     </LinearLayout>
 
+    <!-- 孔内事故  和  设备事故 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -98,25 +171,82 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/tourreport_list_holeinnertime"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_holeinner_time"
             android:textColor="@color/black"
             android:textSize="15sp" />
+            
+        <TextView
+            android:id="@+id/tourreport_list_holeinnertime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:textColor="@color/red"
+            android:textSize="15sp" />
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_device_repair_time"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+        
         <TextView
             android:id="@+id/tourreport_list_devicerepairtime"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:layout_weight="3"
+            android:textColor="@color/red"
             android:textSize="15sp" />
 
+        
+    </LinearLayout>
+    
+    <!-- 其他时长 和 总时长 -->
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp"
+        android:gravity="center"
+        android:orientation="horizontal" >
+        
         <TextView
-            android:id="@+id/tourreport_list_alltime"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_other_time"
             android:textColor="@color/black"
             android:textSize="15sp" />
-    </LinearLayout>
+        
+        <TextView
+            android:id="@+id/tourreport_list_othertime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:textColor="@color/red"
+            android:textSize="15sp" />
+        
+         <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/tourreport_summary_time"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+         
+        <TextView
+            android:id="@+id/tourreport_list_alltime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:textColor="@color/red"
+            android:textSize="15sp" />
+        
+        </LinearLayout>
 
 </LinearLayout>
