--- a/res/layout/workcontent_listview_filling.xml
+++ b/res/layout/workcontent_listview_filling.xml
@@ -47,7 +47,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:textColor="@color/black"
+            android:textColor="@color/red"
             android:textSize="15sp" />
     </LinearLayout>
 
