--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -110,24 +110,38 @@
                     android:textColor="@color/red"
                     android:textSize="15sp" />
 
-                <TextView
+            
+            </LinearLayout>
+
+            
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_layerlist"
+                android:gravity="center"
+                android:orientation="horizontal" >
+				
+               <TextView
                     android:id="@+id/tourreport_starttime_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
+                    android:layout_marginLeft="5dp"
                     android:text="@string/tourreport_time_title"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
                 <!-- 班报开始时间 -->
 
-                <TextView
+                <Spinner
                     android:id="@+id/tourreport_starttime_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="1dp"
-                    android:layout_weight="2"
-                    android:textColor="@color/red"
-                    android:textSize="15sp" />
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="3"
+                    android:textSize="15sp"
+                    android:gravity="center" />
 
                 <TextView
                     android:id="@+id/tourreport_endtime_title"
@@ -139,16 +153,17 @@
                     android:textSize="15sp" />
                 <!-- 班报结束日期 -->
 
-                <TextView
+				
+				<Spinner
                     android:id="@+id/tourreport_endtime_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="1dp"
-                    android:layout_weight="2"
-                    android:textColor="@color/red"
-                    android:textSize="15sp" />
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="3"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15sp"
+                    android:gravity="center" />
             </LinearLayout>
-
             <!-- 按钮区域 -->
 
             <LinearLayout
@@ -177,7 +192,7 @@
                     android:text="@string/tourreport_takeover_new"
                     android:textColor="@color/blue"
                     android:textSize="15sp" />
-                
+
                 <Button
                     android:id="@+id/tourreport_btn_submit"
                     android:layout_width="wrap_content"
@@ -186,7 +201,6 @@
                     android:text="@string/tourreport_btn_submit_title"
                     android:textColor="@color/blue"
                     android:textSize="15sp" />
-                
             </LinearLayout>
 
             <!-- 工作内容的容器 -->
