--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -32,6 +32,39 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_layerlist"
+                android:gravity="center"
+                android:orientation="horizontal" >
+                
+                <TextView
+                    android:id="@+id/tourreport_mineare_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="2"
+                    android:text="@string/tourreport_minearea_title"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+                
+               <!--  矿区 -->
+               <TextView
+                    android:id="@+id/tourreport_minearea_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="1dp"
+                    android:layout_weight="4"
+                    android:textColor="@color/red"
+                    android:textSize="15sp" /> 
+                
+                
+                
+           	</LinearLayout>
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/bg_layerlist"
@@ -42,7 +75,7 @@
                     android:id="@+id/tourreport_holenumber_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_weight="2"
                     android:text="@string/tourreport_holenumber_title"
                     android:textColor="@color/black"
@@ -93,7 +126,7 @@
                     android:id="@+id/tourreport_date_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_weight="2"
                     android:text="@string/tourreport_date_title"
                     android:textColor="@color/black"
@@ -105,10 +138,14 @@
                     android:id="@+id/tourreport_date_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="1dp"
-                    android:layout_weight="4"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="5"
                     android:textColor="@color/red"
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@drawable/date_flag"
                     android:textSize="15sp" />
+                
+                
 
             
             </LinearLayout>
@@ -116,7 +153,7 @@
             
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/bg_layerlist"
@@ -128,7 +165,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginLeft="10dp"
                     android:text="@string/tourreport_time_title"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
@@ -168,7 +205,7 @@
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/bg_layerlist"
@@ -181,6 +218,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="@string/tourreport_workcontent_new"
+                    android:drawableLeft="@drawable/plus_red"
+                    android:drawablePadding="5dp"
                     android:textColor="@color/blue"
                     android:textSize="15sp" />
 
@@ -191,8 +230,23 @@
                     android:layout_gravity="center_vertical"
                     android:text="@string/tourreport_takeover_new"
                     android:textColor="@color/blue"
+                    android:drawableLeft="@drawable/plus_red"
+                    android:drawablePadding="5dp"
                     android:textSize="15sp" />
 
+                
+            </LinearLayout>
+
+            <!-- 保存和重置按钮 -->
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_layerlist"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="horizontal" >
+                
                 <Button
                     android:id="@+id/tourreport_btn_submit"
                     android:layout_width="wrap_content"
@@ -200,9 +254,22 @@
                     android:layout_gravity="center_vertical"
                     android:text="@string/tourreport_btn_submit_title"
                     android:textColor="@color/blue"
+                    android:drawableLeft="@drawable/save"
+                    android:drawablePadding="5dp"
                     android:textSize="15sp" />
+                
+                <Button
+                    android:id="@+id/tourreport_btn_reset"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/tourreport_btn_reset_title"
+                    android:textColor="@color/blue"
+                    android:drawableLeft="@drawable/reset"
+                    android:drawablePadding="5dp"
+                    android:textSize="15sp" />
+                
             </LinearLayout>
-
             <!-- 工作内容的容器 -->
 
             <LinearLayout
