--- a/res/layout/activity_takeover.xml
+++ b/res/layout/activity_takeover.xml
@@ -60,7 +60,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/bg_layerlist"
                 android:orientation="horizontal" >
 
@@ -89,7 +88,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/bg_layerlist"
                 android:orientation="horizontal" >
 
@@ -118,7 +116,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/bg_layerlist"
                 android:orientation="horizontal" >
 
@@ -148,7 +145,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/bg_layerlist"
                 android:orientation="horizontal" >
 
@@ -191,6 +187,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/workcontent_save"
                     android:textColor="@color/blue"
+                    android:drawableLeft="@drawable/save"
+                    android:drawablePadding="5dp"
                     android:textSize="18sp" />
                 
                 <Button
@@ -204,6 +202,8 @@
                     android:layout_marginRight="20dp"
                     android:text="@string/workcontent_cancel"
                     android:textColor="@color/blue"
+                    android:drawableLeft="@drawable/cancel"
+                    android:drawablePadding="5dp"
                     android:textSize="18sp" />
             </RelativeLayout>
         </LinearLayout>
