--- a/res/layout/activity_takeover.xml
+++ b/res/layout/activity_takeover.xml
@@ -48,6 +48,7 @@
                     android:layout_width="0dp"
                     android:layout_height="100dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_weight="8"
                     android:gravity="left|top"
                     android:inputType="textMultiLine"
@@ -77,6 +78,7 @@
                     android:id="@+id/faxie_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="8"
                     android:hint="@string/faxie_hint"
@@ -104,6 +106,7 @@
                 <EditText
                     android:id="@+id/fuzheng_value"
                     android:layout_width="0dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:layout_weight="8"
@@ -132,6 +135,7 @@
                 <EditText
                     android:id="@+id/takeover_tools_value"
                     android:layout_width="0dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"
                     android:layout_height="150dp"
                     android:layout_weight="8"
@@ -161,6 +165,7 @@
                 <EditText
                     android:id="@+id/onduty_value"
                     android:layout_width="0dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:layout_weight="8"
