--- a/res/layout/workcontent_listview_filling.xml
+++ b/res/layout/workcontent_listview_filling.xml
@@ -18,6 +18,7 @@
         android:orientation="horizontal" >
 
         <TextView
+            android:id="@+id/tourreport_list_id_tag"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
