--- a/res/layout/workcontent_listview_filling.xml
+++ b/res/layout/workcontent_listview_filling.xml
@@ -51,7 +51,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:textColor="@color/red"
+            android:drawableRight="@drawable/refresh"
+            android:drawablePadding="5dp"
             android:textSize="15sp" />
+        
+        
     </LinearLayout>
 
     <!-- 纯钻时长 和 辅助时长 -->
