--- a/res/layout/activity_workcontent_list.xml
+++ b/res/layout/activity_workcontent_list.xml
@@ -20,6 +20,8 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="45dp"
+        android:cacheColorHint="#00000000"
+        android:scrollbars="none"
         android:layout_below="@id/title_bar" >
     </ListView>
 
