--- a/res/layout/title.xml
+++ b/res/layout/title.xml
@@ -18,14 +18,15 @@
         android:textSize="20sp" >
     </TextView>
 
-    <!--  ImageView 
+    <ImageView 
+        android:id="@+id/title_sync"
         android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:src="@drawable/ic_2_action_settings"
+        android:src="@drawable/cloud_sync"
         android:contentDescription="@string/settings" 
         android:layout_alignParentRight="true"
         android:paddingRight="10dp"
-         /-->
+         />
 
 </RelativeLayout>
