--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -237,7 +237,7 @@
                 
             </LinearLayout>
 
-            <!-- 保存和重置按钮 -->
+            <!-- 提交和重置按钮 -->
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="60dp"
@@ -409,7 +409,7 @@
                         android:textSize="15sp" />
                 </LinearLayout>
 
-                <!-- 出勤人员 -->
+                <!-- 班长、记录员 -->
 
                 <LinearLayout
                     android:layout_width="fill_parent"
@@ -419,12 +419,30 @@
                     android:background="@drawable/bg_layerlist"
                     android:gravity="center"
                     android:orientation="horizontal" >
+                    
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="2"
+                        android:text="@string/tourleader_title"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/tourreport_tourleader_value"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="1dp"
+                        android:layout_weight="2"
+                        android:textColor="@color/red"
+                        android:textSize="15sp" />
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:layout_weight="3"
+                        android:layout_weight="2"
                         android:text="@string/onduty_title"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
@@ -434,7 +452,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="1dp"
-                        android:layout_weight="7"
+                        android:layout_weight="2"
                         android:textColor="@color/red"
                         android:textSize="15sp" />
                 </LinearLayout>
@@ -538,7 +556,7 @@
                         android:textSize="15sp" />
                 </LinearLayout>
 
-                <!-- 其他，合计 -->
+                <!-- 其他时长，总时长 -->
 
                 <LinearLayout
                     android:layout_width="fill_parent"
