--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -73,6 +73,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
         android:layout_gravity="center">
         
         <TextView android:layout_width="wrap_content"
@@ -95,6 +96,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
         android:layout_gravity="center">
         
         <TextView android:layout_width="wrap_content"
@@ -108,6 +110,141 @@
         	android:layout_weight="1"
         	android:layout_height="wrap_content"
         	/>
+    </LinearLayout>
+    
+    <!-- 项目经理 -->
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        
+        <TextView android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="10dp"
+            android:text="项目经理"
+            android:gravity="right"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"/>
+        
+        <TextView android:id="@+id/settings_projectmanager"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"/>
+    </LinearLayout>
+    
+    <!-- 机长 -->
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        
+        <TextView android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="10dp"
+            android:text="机长"
+            android:gravity="right"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"/>
+        
+        <TextView android:id="@+id/settings_holeleader"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"/>
+    </LinearLayout>
+    
+    <!-- 班长1 -->
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        
+        <TextView android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="10dp"
+            android:text="班长"
+            android:gravity="right"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"/>
+        
+        <TextView android:id="@+id/settings_tourleader1"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"/>
+    </LinearLayout>
+    
+    <!-- 班长2 -->
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        
+        <TextView android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="10dp"
+            android:text="班长"
+            android:gravity="right"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"/>
+        
+        <TextView android:id="@+id/settings_tourleader2"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"/>
+    </LinearLayout>
+    
+    <!-- 班长3 -->
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        
+        <TextView android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="10dp"
+            android:text="班长"
+            android:gravity="right"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"/>
+        
+        <TextView android:id="@+id/settings_tourleader3"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"/>
     </LinearLayout>
     
     
