optimize workcontent list

--- a/res/layout/activity_workcontent_list.xml
+++ b/res/layout/activity_workcontent_list.xml
@@ -7,23 +7,48 @@
 
     <!-- 列表展示 -->
 
-    <include
-        android:id="@+id/title_bar"
-        layout="@layout/title" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@drawable/gradient_box"
+        android:gravity="fill_horizontal"
+        android:id="@+id/the_title_bar"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="20pt"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/btn_syn"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:drawableLeft="@drawable/cloud_sync"
+                android:drawablePadding="5dp"
+                android:text="@string/title_btn_syn" />
+            
+    </RelativeLayout>
 
     <include
         android:id="@+id/bottommenu"
         layout="@layout/common_bottommenu" />
 
+
     <ListView
         android:id="@+id/workcontent_list"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/the_title_bar"
         android:layout_marginBottom="45dp"
         android:cacheColorHint="#00000000"
-        android:scrollbars="none"
-        android:layout_below="@id/title_bar" >
+        android:scrollbars="none" >
     </ListView>
 
-    
 </RelativeLayout>
