--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -107,6 +107,8 @@
                 <Spinner
                     android:id="@+id/setting_spinner_contract"
                     android:layout_width="0dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1" />
@@ -134,6 +136,8 @@
 
                 <Spinner
                     android:id="@+id/setting_spinner_hole"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -289,6 +293,7 @@
                     android:layout_weight="3"
                     android:textSize="15sp" />
             </LinearLayout>
+            
         </LinearLayout>
     </ScrollView>
 
